Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17149

mariabackup hangs if innodb is not started

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL), 10.3(EOL), 10.4(EOL)
    • 10.2.18, 10.3.10, 10.4.0
    • Backup
    • None

    Description

      If server is started without innodb (skip-innodb), the mariabackup hangs.

      log copying thread never finishes due to stop condition being
      metadata_to_lsn < log_copy_scanned_lsn;

      which was introduced in https://github.com/MariaDB/server/commit/dc9c555415b1

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: