MDEV-17149 mariabackup hangs if innodb is not started

Fix exit condition for the log copying thread.